# dataflow-rs

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
config/: pipeline.json  pipeline_clickhouse.json  pipeline_csv.json
docker/: pipeline.json
src/: config.rs  error.rs  main.rs  pipeline.rs  retry.rs  state.rs  types.rs
src/extractor/: clickhouse.rs  csv.rs  mod.rs  postgres.rs
src/loader/: mod.rs  postgres.rs
src/transformer/: aggregator.rs  filter.rs  mapper.rs  mod.rs
src/web/: dashboard.html  handlers.rs  mod.rs  ws.rs
