[package]
name = "etl-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }

sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", 'tls-native-tls', 'chrono'] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-trait = "0.1"

chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.11"

csv = "1"
